--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^6.13.5",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "web3": "^4.16.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,6 +41,13 @@
     ]
   },
   "devDependencies": {
-    "solc": "^0.8.0"
+    "@craco/craco": "^7.1.0",
+    "@tailwindcss/postcss": "^4.0.12",
+    "autoprefixer": "^10.4.21",
+    "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.5.3",
+    "solc": "^0.8.0",
+    "tailwindcss": "^4.0.12",
+    "webpack": "^5.98.0"
   }
 }
